crates/php-parser/tests/snapshots/integration__first_class_callable_as_argument.snap
---
source: crates/php-parser/tests/integration.rs
expression: to_json(&result.program)
---
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "FunctionCall": {
              "name": {
                "kind": {
                  "Identifier": "array_map"
                },
                "span": {
                  "start": 6,
                  "end": 15
                }
              },
              "args": [
                {
                  "name": null,
                  "value": {
                    "kind": {
                      "CallableCreate": {
                        "kind": {
                          "Function": {
                            "kind": {
                              "Identifier": "strlen"
                            },
                            "span": {
                              "start": 16,
                              "end": 22
                            }
                          }
                        }
                      }
                    },
                    "span": {
                      "start": 16,
                      "end": 27
                    }
                  },
                  "unpack": false,
                  "by_ref": false,
                  "span": {
                    "start": 16,
                    "end": 27
                  }
                },
                {
                  "name": null,
                  "value": {
                    "kind": {
                      "FunctionCall": {
                        "name": {
                          "kind": {
                            "Identifier": "array_filter"
                          },
                          "span": {
                            "start": 29,
                            "end": 41
                          }
                        },
                        "args": [
                          {
                            "name": null,
                            "value": {
                              "kind": {
                                "Variable": "arr"
                              },
                              "span": {
                                "start": 42,
                                "end": 46
                              }
                            },
                            "unpack": false,
                            "by_ref": false,
                            "span": {
                              "start": 42,
                              "end": 46
                            }
                          },
                          {
                            "name": null,
                            "value": {
                              "kind": {
                                "CallableCreate": {
                                  "kind": {
                                    "Function": {
                                      "kind": {
                                        "Identifier": "is_string"
                                      },
                                      "span": {
                                        "start": 48,
                                        "end": 57
                                      }
                                    }
                                  }
                                }
                              },
                              "span": {
                                "start": 48,
                                "end": 62
                              }
                            },
                            "unpack": false,
                            "by_ref": false,
                            "span": {
                              "start": 48,
                              "end": 62
                            }
                          }
                        ]
                      }
                    },
                    "span": {
                      "start": 29,
                      "end": 63
                    }
                  },
                  "unpack": false,
                  "by_ref": false,
                  "span": {
                    "start": 29,
                    "end": 63
                  }
                }
              ]
            }
          },
          "span": {
            "start": 6,
            "end": 64
          }
        }
      },
      "span": {
        "start": 6,
        "end": 65
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 65
  }
}
