crates/php-parser/tests/snapshots/integration__for_multiple_expressions.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture(source, &result.program)"
---
=== source ===
<?php for ($i = 0, $j = 10; $i < $j; $i++, $j--) { echo $i; }
=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "For": {
          "init": [
            {
              "kind": {
                "Assign": {
                  "target": {
                    "kind": {
                      "Variable": "i"
                    },
                    "span": {
                      "start": 11,
                      "end": 13
                    }
                  },
                  "op": "Assign",
                  "value": {
                    "kind": {
                      "Int": 0
                    },
                    "span": {
                      "start": 16,
                      "end": 17
                    }
                  }
                }
              },
              "span": {
                "start": 11,
                "end": 17
              }
            },
            {
              "kind": {
                "Assign": {
                  "target": {
                    "kind": {
                      "Variable": "j"
                    },
                    "span": {
                      "start": 19,
                      "end": 21
                    }
                  },
                  "op": "Assign",
                  "value": {
                    "kind": {
                      "Int": 10
                    },
                    "span": {
                      "start": 24,
                      "end": 26
                    }
                  }
                }
              },
              "span": {
                "start": 19,
                "end": 26
              }
            }
          ],
          "condition": [
            {
              "kind": {
                "Binary": {
                  "left": {
                    "kind": {
                      "Variable": "i"
                    },
                    "span": {
                      "start": 28,
                      "end": 30
                    }
                  },
                  "op": "Less",
                  "right": {
                    "kind": {
                      "Variable": "j"
                    },
                    "span": {
                      "start": 33,
                      "end": 35
                    }
                  }
                }
              },
              "span": {
                "start": 28,
                "end": 35
              }
            }
          ],
          "update": [
            {
              "kind": {
                "UnaryPostfix": {
                  "operand": {
                    "kind": {
                      "Variable": "i"
                    },
                    "span": {
                      "start": 37,
                      "end": 39
                    }
                  },
                  "op": "PostIncrement"
                }
              },
              "span": {
                "start": 37,
                "end": 41
              }
            },
            {
              "kind": {
                "UnaryPostfix": {
                  "operand": {
                    "kind": {
                      "Variable": "j"
                    },
                    "span": {
                      "start": 43,
                      "end": 45
                    }
                  },
                  "op": "PostDecrement"
                }
              },
              "span": {
                "start": 43,
                "end": 47
              }
            }
          ],
          "body": {
            "kind": {
              "Block": [
                {
                  "kind": {
                    "Echo": [
                      {
                        "kind": {
                          "Variable": "i"
                        },
                        "span": {
                          "start": 56,
                          "end": 58
                        }
                      }
                    ]
                  },
                  "span": {
                    "start": 51,
                    "end": 60
                  }
                }
              ]
            },
            "span": {
              "start": 49,
              "end": 61
            }
          }
        }
      },
      "span": {
        "start": 6,
        "end": 61
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 61
  }
}
