crates/php-parser/tests/snapshots/integration__foreach_by_reference.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture(source, &result.program)"
---
=== source ===
<?php foreach ($items as &$item) { $item *= 2; }
=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "Foreach": {
          "expr": {
            "kind": {
              "Variable": "items"
            },
            "span": {
              "start": 15,
              "end": 21
            }
          },
          "key": null,
          "value": {
            "kind": {
              "Variable": "item"
            },
            "span": {
              "start": 26,
              "end": 31
            }
          },
          "body": {
            "kind": {
              "Block": [
                {
                  "kind": {
                    "Expression": {
                      "kind": {
                        "Assign": {
                          "target": {
                            "kind": {
                              "Variable": "item"
                            },
                            "span": {
                              "start": 35,
                              "end": 40
                            }
                          },
                          "op": "Mul",
                          "value": {
                            "kind": {
                              "Int": 2
                            },
                            "span": {
                              "start": 44,
                              "end": 45
                            }
                          }
                        }
                      },
                      "span": {
                        "start": 35,
                        "end": 45
                      }
                    }
                  },
                  "span": {
                    "start": 35,
                    "end": 47
                  }
                }
              ]
            },
            "span": {
              "start": 33,
              "end": 48
            }
          }
        }
      },
      "span": {
        "start": 6,
        "end": 48
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 48
  }
}
