crates/php-parser/tests/snapshots/integration__foreach_with_key.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture(source, &result.program)"
---
=== source ===
<?php foreach ($items as $k => $v) { echo $k; }
=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "Foreach": {
          "expr": {
            "kind": {
              "Variable": "items"
            },
            "span": {
              "start": 15,
              "end": 21
            }
          },
          "key": {
            "kind": {
              "Variable": "k"
            },
            "span": {
              "start": 25,
              "end": 27
            }
          },
          "value": {
            "kind": {
              "Variable": "v"
            },
            "span": {
              "start": 31,
              "end": 33
            }
          },
          "body": {
            "kind": {
              "Block": [
                {
                  "kind": {
                    "Echo": [
                      {
                        "kind": {
                          "Variable": "k"
                        },
                        "span": {
                          "start": 42,
                          "end": 44
                        }
                      }
                    ]
                  },
                  "span": {
                    "start": 37,
                    "end": 46
                  }
                }
              ]
            },
            "span": {
              "start": 35,
              "end": 47
            }
          }
        }
      },
      "span": {
        "start": 6,
        "end": 47
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 47
  }
}
